# haskell-pprof

./: NOTICE  README.md  cabal.project  flake.nix
ghc-pprof/: ghc-pprof.cabal
ghc-pprof/src/GHC/Pprof/: Live.hs
ghc-pprof/src/GHC/Pprof/Live/: Internal.hs  Labels.hs  OpenTelemetry.hs  Threads.hs
ghc-pprof/test/: Main.hs
nix/: ghc-pprof.nix  pprof.nix  pyroscope-client.nix  pyroscope-ghc.nix
nix/pyroscope-client-test/: Main.hs  default.nix
nix/pyroscope-ghc-test/: Main.hs  default.nix
pprof/: pprof.cabal
pprof/scripts/: regen-proto.sh
pprof/src/Data/: Pprof.hs
pprof/src/Data/Pprof/: Builder.hs  Time.hs
pprof/src/Proto/Pprof/: Profile.hs  Profile_Fields.hs
pprof/test/: Main.hs
pprof/test/Test/Data/Pprof/: Gen.hs
pyroscope-client/: pyroscope-client.cabal
pyroscope-client/src/Network/Pyroscope/: Client.hs
pyroscope-client/src/Network/Pyroscope/Client/: Internal.hs  Types.hs
pyroscope-client/test/: Main.hs
pyroscope-ghc/: pyroscope-ghc.cabal
pyroscope-ghc/src/Network/Pyroscope/: GHC.hs
src/Data/Pprof/: Types.hs
test/Test/Data/Pprof/: Builder.hs  Golden.hs
